Quorum/Library/Tests/Inheritance/Pass/MeTest.quorum
class Main
    action Main
        B b
        b:Prepare()
        b:TestType()
        b:CallFoo()
    end
end