Quorum/Library/Tests/Inheritance/Fail/UsePrivateAction.quorum
class Main 
    action Main
        Test2 test2
        boolean result = test2:Run()
    end
end